B5 (#3)
* Update app.js

* Update swagger (1).yaml
